Update: run.sh/run.bat 改为自动使用内置 JRE，Windows 双击也可离线一键启动